...
        UILabel.appearance(whenContainedInInstancesOf: [UISearchBar.self]).font = UIFont(name: "HelveticaNueue", size: 14)
        UITextField.appearance(whenContainedInInstancesOf: [UISearchBar.self]).font = UIFont(name: "HelveticaNueue", size: 14)
               
        productSearchBar.delegate = self
        
         // UI Tests configuration
        productSearchBar.searchTextField.accessibilityIdentifier = "searchBarProductsId"
    }
    
    private func setupTableView() {
        productsTableView.delegate = self
        productsTableView.dataSource = self
        
         // UI Tests configuration
        productsTableView.accessibilityIdentifier = "productsTableViewId"
    }
    
    private func setupContainer() {
        let delegate = UIApplication.shared.delegate as? AppDelegate
        if let persistent = delegate?.persistentContainer {
            persistentContainer = persistent
...
