...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        configureViews()
        
        // UI Tests configuration
        orderButton.accessibilityIdentifier = "orderItemButtonId"
    }
    
    // MARK: - Setup Controller and View
    
    public func configure(withProduct product: Product) {
        self.product = product
...
